--- a/tasks.json
+++ b/tasks.json
@@ -1,1 +1,16 @@
-[]
+[
+  {
+    "title": "test1234",
+    "description": "updated description",
+    "dueDate": "2025-06-26",
+    "priority": "High",
+    "completionStatus": true
+  },
+  {
+    "title": "test",
+    "description": "update",
+    "dueDate": "2025-06-14",
+    "priority": "High",
+    "completionStatus": false
+  }
+]
